# bazarrbulksync

./: .gitignore  Dockerfile  LICENSE  README.md  bazarrbulksync_cli_template.yaml  bazarrbulksync_config.yml  bazarrbullksync_tests_template.yaml  config_template.yaml  pyproject.toml  requirements.txt  setup.py
bazarr_api_response_examples/movies/raw/: multiple.txt  none.txt  single.txt
bazarr_api_response_examples/movies/res/: multiple.txt
bazarr_api_response_examples/series/raw/: multiple.txt  none.txt  single.txt
bazarr_api_response_examples/series/res/: multiple.txt
bazarr_api_response_examples/series_episodes/raw/: multiple.txt  single.txt
bazarr_api_response_examples/series_episodes/res/: multiple.txt  single.txt
bazarrbulksync_configs/: cli_config_template.yaml  tests_config_template.yaml
cli/: cli.py  config.py
responses/episodes_history/: single.txt
responses/movies/: none.txt  single.txt
responses/movies_history/: single.txt
responses/series/: none.txt  single.txt
src/bazarrbulksync/: __init__.py  cli.py  client.py  config.py  engine.py  logging_setup.py  models.py  planner.py  util.py
sync/: __init__.py  bazarr.py  sync.py  utils.py
tests/: __init__.py  config.py  test_bazarr.py  test_bazarr_api.py  test_client.py  test_logging_setup.py  test_models_and_config.py  test_planner_engine.py  test_utils.py
